# self_evolving_deep_agents

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: __main__.py
src/agent/: deep_agent.py  prompt_store.py  prompts.py  subagents.py
src/cli/: commands.py
src/config/: settings.py
src/evolution/: analyzer.py  orchestrator.py  prompt_optimizer.py  skill_extractor.py  state.py
src/evolution/graders/: efficiency.py  quality.py  task_completion.py
src/memory/: compression.py  reflection.py  store.py
src/skills/: manager.py
src/tools/: search.py
src/tracing/: fetcher.py  trajectory.py
tasks/: research_tasks.json
tests/: conftest.py
tests/unit/: test_analyzer.py  test_compression.py  test_config.py  test_deep_agent.py  test_graders.py  test_memory_store.py  test_orchestrator.py  test_prompt_optimizer.py  test_prompt_store.py  test_reflection.py  test_skill_extractor.py  test_skill_manager.py  test_subagents.py
